# hack-emulator

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  emu.c
asm/: MaxL.asm  black_line.asm  loop.asm
assembler/: Makefile  assembler.c  assembler.h  binary.c  code.c  main.c  makefile  max.hack  parser.c  parser.h  str_utils.c  str_utils.h  test.hack
assembler/asm_files/: MaxL.asm
assembler/include/: assembler.h  binary.h  hack_assembler.hpp  hack_binary.h  hack_parser.hpp  parser.h  str_utils.h  symbol_table.h  symbol_table.hpp
assembler/src/: assembler.c  assembler.h  binary.c  binary.h  hack_assembler.cpp  hack_binary.c  hack_parser.cpp  main.c  main.cpp  parser.c  str_utils.c  str_utils.h  symbol_table.c  symbol_table.cpp
emulator/: Makefile  cpu.c  emu.c  emu.h  emulator.c  emulator.h  makefile  screen.c  screen.h
emulator/include/: cpu.h  emulator.h  screen.h
emulator/src/: cpu.c  cpu.h  emulator.c  emulator.h  main.c  screen.c
extras/asm/: Rect.asm
libs/include/: command_parser.hpp
libs/src/: command_parser.cpp
roms/: black_line.hack  loop.hack
translator/include/: vm_code_generator.hpp  vm_parser.hpp
translator/src/: main.cpp  vm_code_generator.cpp  vm_parser.cpp
